@@ -95,6 +95,7 @@ def check_is_pair(record1, record2):
     return False
 
 
+def broken_paired_reader(screed_iter, min_length=None, force_single=False):
 def check_is_left(name):
     """Check if the name belongs to a 'left' sequence (/1).
 
@@ -158,6 +159,13 @@ def broken_paired_reader(screed_iter, min_length=None,
        for n, is_pair, read1, read2 in broken_paired_reader(...):
           ...
 
+    Note that 'n' is the number of records read from the input stream, so
+    is incremented by 2 for a pair of reads.
+
+    If 'min_length' is set, all reads under this length are ignored (even
+    if they are pairs).
+
+    If 'force_single' is True, all reads are returned as singletons.
     Note that 'n' behaves like enumerate() and starts at 0, but tracks
     the number of records read from the input stream, so is
     incremented by 2 for a pair of reads.
@@ -175,6 +183,12 @@ def broken_paired_reader(screed_iter, min_length=None,
         raise ValueError("force_single and require_paired cannot both be set!")
 
     # handle the majority of the stream.
+    for n, record in enumerate(screed_iter):
+        # ignore short reads
+        if min_length and len(record.sequence) < min_length:
+            record = None
+            continue
+
     for record in screed_iter:
         # ignore short reads
         if min_length and len(record.sequence) < min_length:
@@ -182,6 +196,8 @@ def broken_paired_reader(screed_iter, min_length=None,
             continue
 
         if prev_record:
+            if check_is_pair(prev_record, record) and not force_single:
+                yield n, True, prev_record, record  # it's a pair!
             if check_is_pair(prev_record, record) and not force_single:
                 yield num, True, prev_record, record  # it's a pair!
                 num += 2
@@ -198,8 +214,21 @@ def broken_paired_reader(screed_iter, min_length=None,
         prev_record = record
         record = None
 
+    # handle the last two records (which cannot be pairs)
     # handle the last record, if it exists (i.e. last two records not a pair)
     if prev_record:
+        # the only way into this if statement is if 'prev_record' and
+        # 'record' are both singletons.
+        if not force_single and record:
+            assert not check_is_pair(prev_record, record)
+
+        yield n, False, prev_record, None
+
+    if record:                     # guaranteed to be orphan
+        # ignore short reads
+        if not min_length or len(record.sequence) >= min_length:
+            n += 1
+            yield n, False, record, None
         if require_paired:
             raise UnpairedReadsError("Unpaired reads when require_paired "
                                      "is set!", prev_record, None)
