@@ -1,3 +1,4 @@
+2015-02-16  Titus Brown  <titus@idyll.org>
 2016-05-11  Titus Brown  <titus@idyll.org>
 
    * tests/test_read_parsers.py: fixed syntax error introduced by previous
@@ -1632,6 +1633,8 @@
 
    * khmer/utils.py: added 'check_is_pair', 'broken_paired_reader', and
    'write_record_pair' functions.
+   * tests/test_functions.py: added unit tests for 'check_is_pair' and
+   'broken_paired_reader'.
    * khmer/khmer_args.py: added streaming reference for future algorithms
    citation.
    * tests/test_functions.py: added unit tests for 'check_is_pair' and
